[workspace]
resolver = "3"
members = [
    "step_1",
    "step_2",
    "step_3",
    "step_4",
    "step_5",
    "step_6",
    "step_7",
    "step_8",
    "step_9",
    "step_10",
    "step_11",
    "step_12",
    "step_13",
    "step_14",
    "step_15",
    "step_16",
    "step_17",
    "moly_017_001_embedded_chat",
    "moly_017_002_image_query",
    "moly_017_003_image_gen",
]
